force-app/main/default/objects/Site_Forecast__c/Site_Forecast__c.object-meta.xml
<CustomObject>
    <description>Site Forecast objects that represents Soft Lock / Hard Lock Lists</description>
    <label>Site Forecast</label>
    <nameField>
        <label>Site Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Forecasts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>