force-app/main/default/objects/Site_Forecast__c/fields/Active_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Active_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for testing to identify sites that have feedback from the Markets</description>
    <label>Active Feedback</label>
    <type>Checkbox</type>
</CustomField>