force-app/main/default/objects/Site_Forecast__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>