force-app/main/default/objects/Site_Forecast__c/fields/ADM_Best_Estimate_Timing_Date__c.field-meta.xml
<CustomField>
    <fullName>ADM_Best_Estimate_Timing_Date__c</fullName>
    <label>ADM Best Estimate Timing Date</label>
    <type>Date</type>
</CustomField>