force-app/main/default/objects/Site_Forecast__c/fields/ADM_Justification__c.field-meta.xml
<CustomField>
    <fullName>ADM_Justification__c</fullName>
    <description>List Project: BVELU: 04/16/2021</description>
    <label>ADM Justification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>