force-app/main/default/objects/Site_Forecast__c/fields/ADM_Justification_Comments__c.field-meta.xml
<CustomField>
    <fullName>ADM_Justification_Comments__c</fullName>
    <label>ADM Justification Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>