force-app/main/default/objects/Site_Forecast__c/fields/ADM_NationalRFResponse__c.field-meta.xml
<CustomField>
    <fullName>ADM_NationalRFResponse__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>ADM NationalRFResponse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>