force-app/main/default/objects/Site_Forecast__c/fields/ADM_Region_Disposition__c.field-meta.xml
<CustomField>
    <fullName>ADM_Region_Disposition__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/02/2021</description>
    <label>ADM Region Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>