force-app/main/default/objects/Site_Forecast__c/fields/ADM_RegionSignOff_Date__c.field-meta.xml
<CustomField>
    <fullName>ADM_RegionSignOff_Date__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>ADM RegionSignOff Date</label>
    <type>Date</type>
</CustomField>