force-app/main/default/objects/Site_Forecast__c/fields/Augment_Status__c.field-meta.xml
<CustomField>
    <fullName>Augment_Status__c</fullName>
    <label>Augment Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>