force-app/main/default/objects/Site_Forecast__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>