force-app/main/default/objects/Site_Forecast__c/fields/Current_BINDING_Phys_Decom_Dates__c.field-meta.xml
<CustomField>
    <fullName>Current_BINDING_Phys_Decom_Dates__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/02/2021</description>
    <label>Current BINDING Phys Decom Dates</label>
    <type>Date</type>
</CustomField>