force-app/main/default/objects/Site_Forecast__c/fields/Deselect__c.field-meta.xml
<CustomField>
    <fullName>Deselect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deselect</label>
    <type>Checkbox</type>
</CustomField>