force-app/main/default/objects/Site_Forecast__c/fields/Enter_Comments__c.field-meta.xml
<CustomField>
    <fullName>Enter_Comments__c</fullName>
    <label>Enter Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>