force-app/main/default/objects/Site_Forecast__c/fields/Excel_Tab__c.field-meta.xml
<CustomField>
    <fullName>Excel_Tab__c</fullName>
    <description>Updated via a process builder from the tield Tab</description>
    <inlineHelpText>Used to identify which tab the site wil appear on.</inlineHelpText>
    <label>Excel Tab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>