force-app/main/default/objects/Site_Forecast__c/fields/Final_List__c.field-meta.xml
<CustomField>
    <fullName>Final_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final List</label>
    <referenceTo>Site_Forecast_Header__c</referenceTo>
    <relationshipLabel>Site Forecasts (Final List)</relationshipLabel>
    <relationshipName>Final_List</relationshipName>
    <type>Lookup</type>
</CustomField>