force-app/main/default/objects/Site_Forecast__c/fields/Forced_Removal__c.field-meta.xml
<CustomField>
    <fullName>Forced_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forced Removal</label>
    <type>Checkbox</type>
</CustomField>