force-app/main/default/objects/Site_Forecast__c/fields/Forced_Removal_Code__c.field-meta.xml
<CustomField>
    <fullName>Forced_Removal_Code__c</fullName>
    <description>W-000157 : RF List - POST FINAL LIST TO RELATED OBJECT UPDATE</description>
    <label>Forced Removal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>