force-app/main/default/objects/Site_Forecast__c/fields/Forced_Removal_Less_than_18__c.field-meta.xml
<CustomField>
    <fullName>Forced_Removal_Less_than_18__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forced Removal Less than 18</label>
    <type>Checkbox</type>
</CustomField>