force-app/main/default/objects/Site_Forecast__c/fields/Forecasted_Logical_Decommission_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Logical_Decommission_Date__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>Forecasted Logical Decommission Date</label>
    <type>Date</type>
</CustomField>