force-app/main/default/objects/Site_Forecast__c/fields/Hard_Lock_List__c.field-meta.xml
<CustomField>
    <fullName>Hard_Lock_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hard Lock List</label>
    <referenceTo>Site_Forecast_Header__c</referenceTo>
    <relationshipLabel>Hard Lock List</relationshipLabel>
    <relationshipName>HardLockedList</relationshipName>
    <type>Lookup</type>
</CustomField>