force-app/main/default/objects/Site_Forecast__c/fields/Initial_BINDING_RF_Shutdown_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_BINDING_RF_Shutdown_Date__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/02/2021</description>
    <label>Initial BINDING RF Shutdown Date</label>
    <type>Date</type>
</CustomField>