force-app/main/default/objects/Site_Forecast__c/fields/Landlord_Entity__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Entity__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>Landlord Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>