force-app/main/default/objects/Site_Forecast__c/fields/Lease_Only__c.field-meta.xml
<CustomField>
    <fullName>Lease_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>W-000157: RF List - POST FINAL LIST TO RELATED OBJECT UPDATE</description>
    <label>Lease Only</label>
    <type>Checkbox</type>
</CustomField>