force-app/main/default/objects/Site_Forecast__c/fields/Light_Dark_Excel_Creation__c.field-meta.xml
<CustomField>
    <fullName>Light_Dark_Excel_Creation__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?id=&quot;+$User.Id+
&quot;&amp;QueryId=[LDTemplate]0Q_011EAY114166?pv0=&quot;+
&quot;&amp;TemplateId=0T_011EAY447691&quot;</formula>
    <inlineHelpText>*Not Needed* There is a field on the User Record that is used to export site forecast data in both light and dark form.</inlineHelpText>
    <label>Light Dark Excel Creation</label>
    <type>Text</type>
</CustomField>