force-app/main/default/objects/Site_Forecast__c/fields/List_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>List_Target_Date__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>List Target Date</label>
    <type>Date</type>
</CustomField>