force-app/main/default/objects/Site_Forecast__c/fields/Macro_Flag__c.field-meta.xml
<CustomField>
    <fullName>Macro_Flag__c</fullName>
    <label>Macro Flag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>