force-app/main/default/objects/Site_Forecast__c/fields/Macro_Site__c.field-meta.xml
<CustomField>
    <fullName>Macro_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Macro Site</label>
    <referenceTo>Macro_Site__c</referenceTo>
    <relationshipLabel>Site Forecasts (Macro Site)</relationshipLabel>
    <relationshipName>Site_Forecasts1</relationshipName>
    <type>Lookup</type>
</CustomField>