force-app/main/default/objects/Site_Forecast__c/fields/Market_Approved__c.field-meta.xml
<CustomField>
    <fullName>Market_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Market Approved</label>
    <type>Checkbox</type>
</CustomField>