force-app/main/default/objects/Site_Forecast__c/fields/National_Response__c.field-meta.xml
<CustomField>
    <fullName>National_Response__c</fullName>
    <label>National Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Response Received</fullName>
            </value>
            <value>
                <fullName>Blank National Response</fullName>
            </value>
            <value>
                <fullName>To Be Excluded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>