force-app/main/default/objects/Site_Forecast__c/fields/National_Response_Denied__c.field-meta.xml
<CustomField>
    <fullName>National_Response_Denied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Response Denied</label>
    <type>Checkbox</type>
</CustomField>