force-app/main/default/objects/Site_Forecast__c/fields/National_Responses_Complete__c.field-meta.xml
<CustomField>
    <fullName>National_Responses_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Responses Complete</label>
    <type>Checkbox</type>
</CustomField>