force-app/main/default/objects/Site_Forecast__c/fields/National_Team_Approve_Reject__c.field-meta.xml
<CustomField>
    <fullName>National_Team_Approve_Reject__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>National Team Approve/Reject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>