force-app/main/default/objects/Site_Forecast__c/fields/New_RF_Date__c.field-meta.xml
<CustomField>
    <fullName>New_RF_Date__c</fullName>
    <label>New RF Date</label>
    <type>Date</type>
</CustomField>