force-app/main/default/objects/Site_Forecast__c/fields/New_RF_Date_EOM__c.field-meta.xml
<CustomField>
    <fullName>New_RF_Date_EOM__c</fullName>
    <formula>IF( ISBLANK(New_RF_Date__c) , Forecasted_Logical_Decommission_Date__c, 
		IF(
  MONTH( New_RF_Date__c) = 12,  
  DATE( YEAR( New_RF_Date__c ), 12, 31 ),
  DATE( YEAR( New_RF_Date__c ), MONTH ( New_RF_Date__c ) + 1, 1 ) - 1 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New RF Date EOM</label>
    <type>Date</type>
</CustomField>