force-app/main/default/objects/Site_Forecast__c/fields/New_Site_Add__c.field-meta.xml
<CustomField>
    <fullName>New_Site_Add__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Site Add</label>
    <type>Checkbox</type>
</CustomField>