force-app/main/default/objects/Site_Forecast__c/fields/New_Site_Add_Macro_Site__c.field-meta.xml
<CustomField>
    <fullName>New_Site_Add_Macro_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Macro site for rf lists</description>
    <inlineHelpText>Enter Site Id to add a new site to the list</inlineHelpText>
    <label>Manual Site add</label>
    <referenceTo>Macro_Site__c</referenceTo>
    <relationshipLabel>Site Forecasts</relationshipLabel>
    <relationshipName>Site_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>