force-app/main/default/objects/Site_Forecast__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>List Update Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>