force-app/main/default/objects/Site_Forecast__c/fields/Notes_comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_comments__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>Notes/comments</label>
    <type>TextArea</type>
</CustomField>