force-app/main/default/objects/Site_Forecast__c/fields/Override_Flag__c.field-meta.xml
<CustomField>
    <fullName>Override_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Flag</label>
    <type>Checkbox</type>
</CustomField>