force-app/main/default/objects/Site_Forecast__c/fields/Physical_Removal__c.field-meta.xml
<CustomField>
    <fullName>Physical_Removal__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/02/2021</description>
    <label>Physical Removal</label>
    <length>1</length>
    <type>Text</type>
</CustomField>