force-app/main/default/objects/Site_Forecast__c/fields/POR_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>POR_Plan_Status__c</fullName>
    <label>POR Plan Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>