force-app/main/default/objects/Site_Forecast__c/fields/Prior_List_Actions__c.field-meta.xml
<CustomField>
    <fullName>Prior_List_Actions__c</fullName>
    <description>Comment History for this site from the previous Lists</description>
    <inlineHelpText>Comment History for this site from the previous Lists</inlineHelpText>
    <label>Prior List Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>