force-app/main/default/objects/Site_Forecast__c/fields/Rad_Center_ft__c.field-meta.xml
<CustomField>
    <fullName>Rad_Center_ft__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>Rad Center (ft)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>