force-app/main/default/objects/Site_Forecast__c/fields/Remove_RF_Forecast_List__c.field-meta.xml
<CustomField>
    <fullName>Remove_RF_Forecast_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>Remove RF Forecast List</label>
    <type>Checkbox</type>
</CustomField>