force-app/main/default/objects/Site_Forecast__c/fields/Rent_Range__c.field-meta.xml
<CustomField>
    <fullName>Rent_Range__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>Rent Range</label>
    <length>100</length>
    <type>Text</type>
</CustomField>