force-app/main/default/objects/Site_Forecast__c/fields/RF800_MHZ_Y_N__c.field-meta.xml
<CustomField>
    <fullName>RF800_MHZ_Y_N__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>800 MHz (Y/N)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>