force-app/main/default/objects/Site_Forecast__c/fields/RF_List_Override__c.field-meta.xml
<CustomField>
    <fullName>RF_List_Override__c</fullName>
    <label>RF List Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>RF List Override Include</fullName>
            </value>
            <value>
                <fullName>RF List Override Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>