force-app/main/default/objects/Site_Forecast__c/fields/RF_Shutdown_Date_is_Locked__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Date_is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RF Shutdown Date is Locked</label>
    <type>Checkbox</type>
</CustomField>