force-app/main/default/objects/Site_Forecast__c/fields/RF_Shutdown_Forecast_Date__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Forecast_Date__c</fullName>
    <label>RF Shutdown Forecast Date</label>
    <type>Date</type>
</CustomField>