force-app/main/default/objects/Site_Forecast__c/fields/RF_Shutdown_Forecast_Date_from_Source_Sy__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Forecast_Date_from_Source_Sy__c</fullName>
    <label>RF Shutdown Forecast Date(Source System)</label>
    <type>Date</type>
</CustomField>