force-app/main/default/objects/Site_Forecast__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>Site ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>