force-app/main/default/objects/Site_Forecast__c/fields/Soft_Lock_List__c.field-meta.xml
<CustomField>
    <fullName>Soft_Lock_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Soft Lock List</label>
    <referenceTo>Site_Forecast_Header__c</referenceTo>
    <relationshipLabel>Soft Locked List</relationshipLabel>
    <relationshipName>Site_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>