force-app/main/default/objects/Site_Forecast__c/fields/Softlock_Tab__c.field-meta.xml
<CustomField>
    <fullName>Softlock_Tab__c</fullName>
    <label>Softlock Tab</label>
    <length>40</length>
    <type>Text</type>
</CustomField>