force-app/main/default/objects/Site_Forecast__c/fields/Sprint_S_Tmobile_T__c.field-meta.xml
<CustomField>
    <fullName>Sprint_S_Tmobile_T__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>Sprint (S) / Tmobile (T)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>