force-app/main/default/objects/Site_Forecast__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(Soft_Lock_List__r.Name)),
ISBLANK(Hard_Lock_List__r.Name),
ISBLANK(Final_List__r.Name)
),
TEXT(Soft_Lock_List__r.Status__c),
IF(
AND(
NOT(ISBLANK(Soft_Lock_List__r.Name)),
NOT(ISBLANK(Hard_Lock_List__r.Name)),
ISBLANK(Final_List__r.Name)
),
TEXT(Hard_Lock_List__r.Status__c),
IF(
AND(
NOT(ISBLANK(Soft_Lock_List__r.Name)),
NOT(ISBLANK(Hard_Lock_List__r.Name)),
NOT(ISBLANK(Final_List__r.Name))
),
TEXT(Final_List__r.Status__c),
&quot;None&quot;
)))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>