force-app/main/default/objects/Site_Forecast__c/fields/Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>Structure_Type__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>Structure Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>