force-app/main/default/objects/Site_Forecast__c/fields/Tab__c.field-meta.xml
<CustomField>
    <fullName>Tab__c</fullName>
    <formula>IF(   CONTAINS(TEXT(RF_List_Override__c),&quot;Exclude&quot;) , 
&quot;To Be Excluded&quot;,
 IF( Forced_Removal__c = TRUE, 
&quot;Forced Removals&quot;,
 IF( AND( CONTAINS( ADM_NationalRFResponse__c , &quot;Approved&quot;), CONTAINS( BKL_Vetted_For_Decom__c , &quot;Approved&quot;),  CONTAINS( ADM_NationalLeaseResponse__c , &quot;Approved&quot;) ) , 
&quot;With National Response&quot;, 
&quot;Blank National Responses&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tab</label>
    <type>Text</type>
</CustomField>