force-app/main/default/objects/Site_Forecast__c/fields/Tab_Formula_Hardlock__c.field-meta.xml
<CustomField>
    <fullName>Tab_Formula_Hardlock__c</fullName>
    <formula>IF( CONTAINS(TEXT(RF_List_Override__c),&quot;Exclude&quot;) ,
&quot;To Be Excluded&quot;,
IF( Macro_Site__r.Forced_Removal__c = &apos;Y&apos;,
&quot;Forced Removals&quot;,
IF( AND( CONTAINS( Macro_Site__r.ADM_NationalRFResponse__c , &quot;Approved&quot;), CONTAINS( Macro_Site__r.BKL_Vetted_For_Decom__c , &quot;Approved&quot;), CONTAINS( Macro_Site__r.ADM_NationalLeaseResponse__c , &quot;Approved&quot;) ) ,
&quot;With National Response&quot;,
&quot;Blank National Responses&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tab Formula Hardlock</label>
    <type>Text</type>
</CustomField>