force-app/main/default/objects/Site_Forecast__c/fields/TMO_Region__c.field-meta.xml
<CustomField>
    <fullName>TMO_Region__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>TMO Region (deprecated)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>