force-app/main/default/objects/Site_Forecast__c/fields/TMO_Region_Picklist__c.field-meta.xml
<CustomField>
    <fullName>TMO_Region_Picklist__c</fullName>
    <label>TMO Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CENTRAL</fullName>
            </value>
            <value>
                <fullName>NORTHEAST</fullName>
            </value>
            <value>
                <fullName>WEST</fullName>
            </value>
            <value>
                <fullName>SOUTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>