force-app/main/default/objects/Site_Forecast__c/fields/Type_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Change__c</fullName>
    <label>Type of Change</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Change</fullName>
            </value>
            <value>
                <fullName>Date Add</fullName>
            </value>
            <value>
                <fullName>New RF Date</fullName>
            </value>
            <value>
                <fullName>New Site Add</fullName>
            </value>
            <value>
                <fullName>Deselect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>