force-app/main/default/objects/Site_Forecast__c/fields/Type_of_Lock__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Lock__c</fullName>
    <description>SoftLock / Hardlock / PostHardLock --&gt; Will have one of these values to define what type of list it is</description>
    <label>Type of Lock</label>
    <length>100</length>
    <type>Text</type>
</CustomField>