force-app/main/default/objects/Site_Forecast__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <description>BVELU: Added for RF Site Forecast: 03/01/2021</description>
    <label>ZipCode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>