force-app/main/default/objects/Site_Forecast__c/recordTypes/ReadOnly.recordType-meta.xml
<RecordType>
    <fullName>ReadOnly</fullName>
    <active>true</active>
    <description>To Make the fields Read-only</description>
    <label>ReadOnly</label>
</RecordType>