force-app/main/default/objects/Site_Forecast__c/recordTypes/Site_Forecast.recordType-meta.xml
<RecordType>
    <fullName>Site_Forecast</fullName>
    <active>true</active>
    <description>Default Record Type to create Site Forecasts</description>
    <label>Site Forecast</label>
</RecordType>