force-app/main/default/objects/Site_Forecast__c/recordTypes/Uploaded_to_Intralink.recordType-meta.xml
<RecordType>
    <fullName>Uploaded_to_Intralink</fullName>
    <active>true</active>
    <label>Uploaded to Intralink</label>
</RecordType>