force-app/main/default/objects/Site_Forecast__c/validationRules/Enter_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Comments</fullName>
    <active>true</active>
    <description>Whenever, any of the three fields are updated, we are requested user to provide the reasons</description>
    <errorConditionFormula>AND(!ISCHANGED(Comment_History__c),
(OR(ISCHANGED(New_RF_Date__c ),
ISCHANGED( Remove_RF_Forecast_List__c ),
ISCHANGED( Forced_Removal__c ))))</errorConditionFormula>
    <errorDisplayField>Enter_Comments__c</errorDisplayField>
    <errorMessage>Please provide the Reason in Enter Comments</errorMessage>
</ValidationRule>