force-app/main/default/objects/Site_Forecast__c/validationRules/No_Updates_If_RecordType_ReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Updates_If_RecordType_ReadOnly</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISCHANGED(Remove_RF_Forecast_List__c),
ISCHANGED(Enter_Comments__c ),
ISCHANGED(New_RF_Date__c ),
ISCHANGED(Notes_comments__c)
),
RecordType.Name = &apos;ReadOnly&apos;
)</errorConditionFormula>
    <errorMessage>Site Forecast records already uploaded to Intralinks, No updates allowed</errorMessage>
</ValidationRule>